# Subnetting

./: README.md  cli.py  practice.py  pyproject.toml  run.sh  setup.py  subnet.py
simple-subnet/: subnet.py
simple_subnet.egg-info/: PKG-INFO  SOURCES.txt
simplesubnet/: README.md  pyproject.toml  requirements.txt
simplesubnet/simplesubnet/: subnet.py
simplesubnet/tests/: test_subnet.py
tests/: test_subnet.py
